--- a/admin/meeting/20130820.md
+++ b/admin/meeting/20130820.md
@@ -3,8 +3,8 @@ layout: default
 description: Champions, various updates, vote of no confidence
 date: 2013-08-20
 time:
-  open: 18:41
-  close: 20:08
+  open: "18:41"
+  close: "20:08"
 author: Unknown
 signed: Unknown
 tally: 0
